# manucure

./: .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  INSTALL.md  README.md  config.toml  docker-compose.yml  justfile  sqlx-data.json  tailwind.config.js
.github/workflows/: CI.yml
assets/: article.js  instant-meilisearch.umd.min.js  instant-meilisearch.umd.min.js.map  search.js  style.css  tailwind.min.css
charts/manucure/: Chart.yaml  values.yaml
charts/manucure/charts/: meilisearch-0.1.48.tgz
charts/manucure/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
crates/manucure-cli/: Cargo.toml
crates/manucure-cli/src/: main.rs  search.rs
crates/manucure-db/: Cargo.toml  sqlx-data.json
crates/manucure-db/migrations/: 20230205125434_base.sql  20230529091451_password_hash.sql
crates/manucure-db/src/: article.rs  error.rs  lib.rs  tag.rs  user.rs
crates/manucure-index/: Cargo.toml
crates/manucure-index/src/: lib.rs  model.rs
crates/manucure-model/: Cargo.toml
crates/manucure-model/src/: article.rs  lib.rs  tag.rs
crates/manucure-readability/: Cargo.toml
crates/manucure-readability/src/: lib.rs
crates/manucure-settings/: Cargo.toml
crates/manucure-settings/src/: lib.rs  openid.rs
crates/manucure-web/: Cargo.toml
crates/manucure-web/src/: auth.rs  errors.rs  lib.rs  state.rs
crates/manucure-web/src/auth/: error.rs  mod.rs
crates/manucure-web/src/auth/openid/: mod.rs
crates/manucure-web/src/auth/simple/: login.rs  mod.rs  password.rs  signin.rs
crates/manucure-web/src/views/: mod.rs
crates/manucure-web/src/views/article/: archive.rs  create.rs  delete.rs  get.rs  mod.rs  star.rs  tag.rs
crates/manucure-web/src/views/home/: archive.rs  index.rs  mod.rs  star.rs  tag.rs
crates/manucure-web/src/views/tag/: create.rs  delete.rs  mod.rs
crates/manucure-web/templates/: bar.html  base.html  error.html  index.html  login.html  signin.html
crates/manucure-web/templates/modals/: article_tags.html
migrations/: 20230205125434_base.sql  20230206102319_tags.sql  20230206200726_archive_and_star.sql  20230207095109_dates.sql
src/: auth.rs  errors.rs  main.rs  readable_html.rs  search.rs  settings.rs  state.rs
src/db/: article.rs  mod.rs  tag.rs  user.rs
src/views/: article.rs  filters.rs  home.rs  mod.rs
src/views/article/: archive.rs  create.rs  delete.rs  get.rs  star.rs  tag.rs
src/views/home/: archive.rs  index.rs  mod.rs  star.rs  tag.rs
src/views/tag/: create.rs  delete.rs  mod.rs
templates/: archive.html  article.html  bar.html  base.html  error.html  index.html  nav.html  search.html  tags.html
