[package]
name = "manucure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
axum = "0.6.4"
axum-macros = "0.3.2"
askama = "0.11.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "offline", "chrono", "uuid"] }
tracing = "0.1.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.9"
http = "0.2.8"
readability = { version = "0.2.0", default-features = false }
reqwest = "0.11.14"
url = "2.3.1"
serde = { version = "1", features = [ "derive" ] }
