[package]
name = "manucure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
axum = { version = "0.6.4", features = ["headers", "json"] } 
axum-macros = "0.3.2"
askama = { version = "0.11.1", features = ["serde-json"]}
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "offline", "chrono", "uuid"] }
tracing = "0.1.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
anyhow = "1.0.9"
http = "0.2.8"
readability = { git = "https://github.com/oknozor/readability" }
reqwest = { version = "0.11.14", features = ["json", "native-tls-vendored"] }
url = "2.3.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.93"
oauth2 = "4.1"
async-session = "3.0.0"
once_cell = "1.17.0"
config = "0.13.3"
headers = "0.3.8"
chrono = { version = "0.4.23", features = ["serde"] }
estimated_read_time = "1.0.0"
meilisearch-sdk = "0.22.0"
clap = { version = "4.1.4", features = ["derive"] }

