[workspace]
members = ["crates/*"]

[workspace.dependencies]
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres", "offline", "chrono", "uuid"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = [ "derive" ] }
manucure-db = { path = "crates/manucure-db" }
manucure-index = { path = "crates/manucure-index" }
manucure-readability = { path = "crates/manucure-readability" }
manucure-web = { path = "crates/manucure-web" }
manucure-model = { path = "crates/manucure-model" }
manucure-settings = { path = "crates/manucure-settings" }

chrono = { version = "0.4.24", features = ["serde"] }
readability = { git = "https://github.com/oknozor/readability" }
thiserror = "1.0.40"
meilisearch-sdk = "0.23.1"
axum = { version = "0.6.18", features = ["headers", "json"] }
axum-macros = "0.3.7"
askama = { version = "0.12.0", features = ["serde-json"]}
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
anyhow = "1.0.71"
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json", "native-tls-vendored"] }
url = "2.3.1"
oauth2 = "4.4.0"
async-session = "3.0.0"
headers = "0.3.8"
estimated_read_time = "1.0.0"
config = "0.13.3"
once_cell = "1.17.1"
clap = { version = "4.3.0", features = ["derive"] }