[package]
name = "manucure-web"
version = "0.1.0"
edition = "2021"

[dependencies]
manucure-db.workspace = true
manucure-index.workspace = true
manucure-model.workspace = true
manucure-readability.workspace = true
manucure-settings.workspace = true

axum.workspace = true
askama.workspace = true
tower-http.workspace=true
serde.workspace=true
tracing.workspace=true
anyhow.workspace=true
http.workspace=true
url.workspace=true
oauth2.workspace=true
async-session.workspace=true
headers.workspace=true
estimated_read_time.workspace=true
reqwest.workspace=true
