[package]
name = "manucure-web"
version = "0.1.0"
edition = "2021"

[dependencies]
manucure-db.workspace = true
manucure-index.workspace = true
manucure-model.workspace = true
manucure-readability.workspace = true
manucure-settings.workspace = true

axum.workspace = true
askama.workspace = true
tower-http.workspace=true
serde.workspace=true
tracing.workspace=true
anyhow.workspace=true
http.workspace=true
url.workspace=true
oauth2.workspace=true
async-session.workspace=true
headers.workspace=true
estimated_read_time.workspace=true
reqwest.workspace=true
thiserror.workspace=true
tokio.workspace=true

argon2 = "0.5.0"
sha3 = "0.10.8"
secrecy = "0.8.0"
rand =  "0.8.5"
